prevent overflow quivering

--- a/src/index.css
+++ b/src/index.css
@@ -40,23 +40,20 @@ body {
 /*
  * seems that overflow:hidden is necessary
  * for all reflex-elements
- * BUT: map is not shown with it...
  */
 
 .reflex-element {
   border-right: 0 !important;
   border-left: 0 !important;
+  /*overflow: hidden !important;*/
 }
-/*
-.reflex-element div {
-  overflow: hidden;
-}*/
+
+.reflex-element.tree-reflex-element {
+  overflow: hidden !important;
+}
 
 .reflex-splitter {
   background-color: #FFF3E0 !important;
-  /*
-  border-right: 1px solid #FFFDE7 !important;
-  border-left: 1px solid #FFFDE7 !important;*/
 }
 .reflex-splitter:hover {
   background-color: #FFE0B2 !important;
